[package]
name = "tree-sitter-fuse-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.7"
env_logger = "0.10.0"
log = "0.4"
tree-sitter = "0.20.9"

[build-dependencies]
once_cell = "1.17.1"
log = "0.4"
env_logger = "0.10.0"
toml = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
cc="*"
